--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -28,7 +28,7 @@ exec-once = wl-paste --type text --watch cliphist store # cliphist with text
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
-$terminal = gnome-terminal
+$terminal = kitty
 $fileManager = nautilus
 $menu = rofi -show drun -show-icons
 
@@ -73,11 +73,12 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    
     blur {
         enabled = true
         size = 3
         passes = 1
+        popups = true
+        ignore_opacity = true
     }
 
     drop_shadow = yes
