--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -124,12 +124,12 @@
 
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "  {signalStrength}%",
+        "format-wifi": "  {essid} {signalStrength}%",
         "format-ethernet": "{ipaddr}/{cidr} ",
         "tooltip-format": "{essid} - {ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}:{essid} {ipaddr}/{cidr}"
+        "on-click": ". rofi-wifi-menu/rofi-wifi-menu.sh"
     },
 
     "bluetooth": {
