--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -196,5 +196,6 @@ bindm = $mainMod, mouse:273, resizewindow
 
 binde=, XF86AudioRaiseVolume, exec, pamixer -i 5
 binde=, XF86AudioLowerVolume, exec, pamixer -d 5
+binde=, XF86AudioMute, exec, pamixer -t
 binde=, XF86MonBrightnessUp, exec, brightnessctl set 5%+
 binde=, XF86MonBrightnessDown, exec, brightnessctl set 5%-
