--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /mnt/d/Media/Images/desktop.jpg
+preload = ~/.config/media/desktop.jpg
 
-wallpaper = ,/mnt/d/Media/Images/desktop.jpg
+wallpaper = ,~/.config/media/desktop.jpg
