update hyprland config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -75,10 +75,12 @@ decoration {
     rounding = 10
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        noise = 0.02
+        size = 10
+        passes = 3
+        brightness = 1
+        contrast = 1
         popups = true
-        ignore_opacity = true
     }
 
     drop_shadow = yes
@@ -135,7 +137,8 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
-
+windowrulev2 = opacity 0.8 0.7, class:^kitty$
+windowrulev2 = opacity 0.8, class:^Spotify$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -145,8 +148,7 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive, 
 bind = CTRL ALT, DELETE, exit, 
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, I, togglefloating, 
-bind = $mainMod, T, exec, $menu
+bind = $mainMod, T, togglefloating, 
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
