--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -201,3 +201,5 @@ binde=, XF86AudioLowerVolume, exec, pamixer -d 5
 binde=, XF86AudioMute, exec, pamixer -t
 binde=, XF86MonBrightnessUp, exec, brightnessctl set 5%+
 binde=, XF86MonBrightnessDown, exec, brightnessctl set 5%-
+
+binde=, Print, exec, grimblast copy area
