--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,6 +23,7 @@ exec-once = waybar # Waybar
 exec-once = hyprpaper # Wallpaper
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # Gnome GUI Authenticate
 exec-once = wl-paste --type text --watch cliphist store # cliphist with text
+exec-once = ibus start
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
