--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,7 +23,7 @@ exec-once = waybar # Waybar
 exec-once = hyprpaper # Wallpaper
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # Gnome GUI Authenticate
 exec-once = wl-paste --type text --watch cliphist store # cliphist with text
-exec-once = ibus start
+exec-once = ibus-daemon -d & # start ibus
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -140,6 +140,8 @@ device:epic-mouse-v1 {
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 windowrulev2 = opacity 0.8 0.7, class:^kitty$
 windowrulev2 = opacity 0.8, class:^Spotify$
+windowrulev2 = float, class:^org.gnome.Calculator$
+windowrulev2 = workspace 10 silent, class:^Spotify$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -147,7 +149,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive, 
-bind = CTRL ALT, DELETE, exit, 
+bind = CONTROL ALT, DELETE, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, T, togglefloating, 
 bind = $mainMod, R, exec, $menu
@@ -197,10 +199,12 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+bind = CONTROL SHIFT, Escape, exec, gnome-system-monitor
+
 binde=, XF86AudioRaiseVolume, exec, pamixer -i 5
 binde=, XF86AudioLowerVolume, exec, pamixer -d 5
 binde=, XF86AudioMute, exec, pamixer -t
 binde=, XF86MonBrightnessUp, exec, brightnessctl set 5%+
 binde=, XF86MonBrightnessDown, exec, brightnessctl set 5%-
-
+bind =, XF86Calculator, exec, gnome-calculator
 binde=, Print, exec, grimblast copy area
