--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,6 +24,7 @@ exec-once = hyprpaper # Wallpaper
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # Gnome GUI Authenticate
 exec-once = wl-paste --type text --watch cliphist store # cliphist with text
 exec-once = ibus-daemon -d & # start ibus
+exec-once = spotify
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -123,7 +124,8 @@ gestures {
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true
 }
 
 # Example per-device config
