--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -203,6 +203,7 @@ bindm = $mainMod, mouse:273, resizewindow
 
 bind = CONTROL SHIFT, Escape, exec, gnome-system-monitor
 
+bind =, XF86AudioPlay, exec, playerctl play-pause
 binde=, XF86AudioRaiseVolume, exec, pamixer -i 5
 binde=, XF86AudioLowerVolume, exec, pamixer -d 5
 binde=, XF86AudioMute, exec, pamixer -t
