--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,143 +1,92 @@
-{
-    "layer": "top",
-    "position": "bottom",
-    "mod": "dock",
-    "exclusive": true,
-    "passthrough": false,
-    "gtk-layer-shell": true,
-    "height": 30,
-    "margin-left": 10,
-    "margin-right": 10,
-    "margin-bottom": 10,
-    "modules-left": ["clock", "hyprland/workspaces"],
-    //"modules-left": ["clock","hyprland/window"],
-    "modules-center": ["hyprland/window"],
-    "modules-right": ["battery","backlight","pulseaudio","pulseaudio#microphone", "network", "bluetooth"], 
-    "hyprland/window": {
-        "format": "{}"
-    },
+[{
+  "name": "waybar",
+  "mode": "dock",
+  "layer": "top",
+  "position": "bottom",
+  "spacing": 10,
+  "margin-bottom": 10,
+  "spacing": 10,
 
-    "wlr/workspaces": {
-        "disable-scroll": true,
-        "all-outputs": true,
-        "on-click": "activate",
-        "persistent_workspaces": {
-            "1": [],
-            "2": [],
-            "3": [],
-            "4": [],
-            "5": [],
-            "6": [],
-            "7": [],
-            "8": [],
-            "9": [],
-            "10": []
-        }
-    },
-    
-    //"custom/power_profile":{
-        //shows the current power profile and switches to next on click
-    //    "exec": "asusctl profile -p | sed s:'Active profile is'::",
-    //    "interval": 30,
-    //    "format": "󰈐{}", 
-    //    "on-click": "asusctl profile -n; pkill -SIGRTMIN+8 waybar",
-    //    "signal": 8
-    //},
+  "modules-left": [
+    "clock",
+    "wlr/taskbar"
+  ],
 
-    //"custom/weather" : {
-        //shows the current weather and forecast
-        // "tooltip" : true,
-        //"format" : "{}",
-        //"interval" : 30,
-        //"exec" : "~/.config/waybar/scripts/waybar-wttr.py",
-        //"return-type" : "json"
-    //},
+  "modules-center": [
+    "hyprland/workspaces"
+  ],
 
-    "tray": {
-        "icon-size": 15,
-        "spacing": 10
-    },
+  "modules-right": [
+    "battery",
+    "backlight",
+    "pulseaudio",
+    "network",
+    "bluetooth"
+  ],
 
-    "clock": {
-        "format": "{:%H:%M %Y-%m-%d}",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
-    },
+  "clock": {
+    "interval": 1,
+    "format": "{:%H:%M:%S %Y-%m-%d}",
+    "tooltip-format": "{calendar}"
+  },
 
-    "backlight": {
-        "device": "intel_backlight",
-        "format": "{icon} {percent}%",
-        "format-icons": ["󰃞", "󰃟", "󰃠"],
-        "on-scroll-up": "brightnessctl set 5%+",
-        "on-scroll-down": "brightnessctl set 5%-",
-        "min-length": 6
-    },
+  "wlr/taskbar": {
+    "on-click": "activate"
+  },
 
-    "battery": {
-        "states": {
-            "good": 95,
-            "warning": 30,
-            "critical": 20
-        },
-        "format": "{icon} {capacity}%",
-        "format-charging": " {capacity}%",
-        "format-plugged": " {capacity}%",
-        "format-alt": "{time} {icon}",
-        "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
-    },
+  "hyprland/workspaces": {
+    "format": "",
+  },
 
-    "pulseaudio": {
-        "format": "{icon} {volume}%",
-        "tooltip": false,
-        "format-muted": " Muted",
-        "on-click": "pamixer -t",
-        "on-scroll-up": "pamixer -i 5",
-        "on-scroll-down": "pamixer -d 5",
-        "scroll-step": 5,
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
-        }
-    },
+  "battery": {
+    "interval": 10,
+    "format": "{icon} {}%",
+    "format-charging": " {capacity}%",
+    "format-plugged": "  {capacity}%",
+    "format-alt": "{time} {icon}",
+    "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
+  },
 
-    "pulseaudio#microphone": {
-        "format": "{format_source}",
-        "format-source": "Mic: {volume}%",
-        "format-source-muted": "Mic: Muted",
-        "on-click": "pamixer --default-source -t",
-        "on-scroll-up": "pamixer --default-source -i 5",
-        "on-scroll-down": "pamixer --default-source -i 5",
-        "scroll-step": 5
-    },
-    
-    //"temperature": {
-        //"thermal-zone": 1,
-        //"format": "{temperatureF}°F ",
-        //"critical-threshold": 80,
-        //"format-critical": "{temperatureC}°C "
-    //},
+  "backlight": {
+    "format": "{icon}  {}%",
+    "format-icons": ["󰃞", "󰃟", "󰃠"]
+  },
 
-    "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "  {essid} {signalStrength}%",
-        "format-ethernet": "{ipaddr}/{cidr} ",
-        "tooltip-format": "{essid} - {ifname} via {gwaddr} ",
-        "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠",
-        "on-click": "bash ~/.config/waybar/rofi-wifi-menu/rofi-wifi-menu.sh"
-    },
-
-    "bluetooth": {
-	    "format": " {status}",
-	    "format-disabled": "", // an empty format will hide the module
-	    "format-connected": " {num_connections}",
-	    "tooltip-format": "{device_alias}",
-	    "tooltip-format-connected": " {device_enumerate}",
-	    "tooltip-format-enumerate-connected": "{device_alias}",
-      "on-click": "bash ~/.config/waybar/rofi-bluetooth/rofi-bluetooth"
+  "pulseaudio": {
+    "format": "{icon}  {volume}%",
+    "format-icons": {
+      "headphone": "",
+      "hands-free": "",
+      "headset": "",
+      "phone": "",
+      "portable": "",
+      "car": "",
+      "default": ["󰕿", "󰖀", "󰕾"],
     }
-}
+  },
+
+  "network": {
+    "format": "{ifname}",
+    "format-wifi": "{icon}  {essid}",
+    "format-ethernet": "󰈀  {ipaddr}",
+    "format-disconnected": "󰤮 Disconnected",
+    "format-icons": {
+      "wifi": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤥"]
+    },
+    "on-click": ". ~/.config/waybar/rofi-wifi-menu/rofi-wifi-menu.sh"
+  },
+
+  "bluetooth": {
+    "format": "{icon} {status}",
+    "format-connected": "{icon} {num_connections} connected",
+    "format-icons": ["󰂯"],
+    "on-click": "~/.config/waybar/rofi-bluetooth/rofi-bluetooth"
+  }
+},
+{
+  "mode": "dock",
+  "position": "top",
+  "modules-center": ["hyprland/window"],
+  "margin-top": 10,
+  "height": 25,
+}]
