--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -140,7 +140,7 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
-windowrulev2 = opacity 0.8 0.7, class:^kitty$
+windowrulev2 = opacity 0.7, class:^kitty$
 windowrulev2 = opacity 0.8, class:^Spotify$
 windowrulev2 = float, class:^org.gnome.Calculator$
 windowrulev2 = workspace 10 silent, class:^Spotify$
