--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -212,12 +212,18 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
+# Switch languages with ibus
+bind = $mainMod SHIFT, E, exec, ibus engine xkb:us::eng
+bind = $mainMod SHIFT, V, exec, ibus engine Bamboo
+
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Open apps
 bind = CONTROL SHIFT, Escape, exec, gnome-system-monitor
 
+# Functional keys
 bind =, XF86AudioPlay, exec, playerctl play-pause
 binde=, XF86AudioRaiseVolume, exec, pamixer -i 5
 binde=, XF86AudioLowerVolume, exec, pamixer -d 5
