add focus monitor shortcut

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -192,6 +192,10 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# Move focus to window
+bind = ALT, 1, focusmonitor, 1
+bind = ALT, 2, focusmonitor, 0
+
 # Move workspace to window
 bind = $mainMod CONTROL, 1, exec, hyprctl dispatch moveworkspacetomonitor 1 current
 bind = $mainMod CONTROL, 2, exec, hyprctl dispatch moveworkspacetomonitor 2 current
