--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,6 +34,7 @@ exec-once = spotify
 $terminal = kitty
 $fileManager = nautilus
 $menu = rofi -show drun -show-icons
+$lock = swaylock
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -161,6 +162,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = $mainMod, L, exec, $lock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
