--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,6 +26,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # Gnome GU
 exec-once = wl-paste --type text --watch cliphist store # cliphist with text
 exec-once = ibus-daemon -d & # start ibus
 exec-once = spotify
+exec-once = swayidle
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
