--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -159,6 +159,7 @@ bind = $mainMod, C, killactive,
 bind = CONTROL ALT, DELETE, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, T, togglefloating, 
+bind = $mainMod SHIFT, T, workspaceopt, allfloat
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
