--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -217,8 +217,8 @@ bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_down, workspace, e-1
+bind = $mainMod, mouse_up, workspace, e+1
 
 # Switch languages with ibus
 bind = $mainMod SHIFT, E, exec, ibus engine xkb:us::eng
