--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -145,7 +145,7 @@ device:epic-mouse-v1 {
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 windowrulev2 = opacity 0.7, class:^kitty$
 windowrulev2 = opacity 0.8, class:^Spotify$
-windowrulev2 = float, class:^org.gnome.Calculator$
+windowrulev2 = float, class:^(org.gnome.Calculator|pavucontrol)$
 windowrulev2 = workspace 10 silent, class:^Spotify$
 windowrulev2 = monitor 0, class:^Rofi$
 windowrulev2 = stayfocused, class:^Rofi$
