--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -63,7 +63,8 @@
       "portable": "",
       "car": "",
       "default": ["󰕿", "󰖀", "󰕾"],
-    }
+    },
+    "on-click": "pavucontrol"
   },
 
   "network": {
