--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,3 +6,8 @@ include current-theme.conf
 font_family   Fira Code
 
 window_padding_width 5
+
+map ctrl+k scroll_line_up
+map ctrl+j scroll_line_down
+map ctrl+shift+k scroll_home
+map ctrl+shift+j scroll_end
