--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -162,15 +162,15 @@ bind = $mainMod, T, togglefloating,
 bind = $mainMod SHIFT, T, workspaceopt, allfloat
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-bind = $mainMod, L, exec, $lock
+bind = $mainMod SHIFT, L, exec, $lock
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -216,9 +216,11 @@ bind = $mainMod CONTROL, 0, exec, hyprctl dispatch moveworkspacetomonitor 10 cur
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
+# Scroll through existing workspaces
 bind = $mainMod, mouse_down, workspace, e-1
 bind = $mainMod, mouse_up, workspace, e+1
+bind = $mainMod SHIFT, J, workspace, e-1
+bind = $mainMod SHIFT, K, workspace, e+1
 
 # Switch languages with ibus
 bind = $mainMod SHIFT, E, exec, ibus engine xkb:us::eng
