add hyprland workspace keybinds

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -221,6 +221,8 @@ bind = $mainMod, mouse_down, workspace, e-1
 bind = $mainMod, mouse_up, workspace, e+1
 bind = $mainMod SHIFT, J, workspace, e-1
 bind = $mainMod SHIFT, K, workspace, e+1
+bind = $mainMod CONTROL, J, workspace, -1
+bind = $mainMod CONTROL, K, workspace, +1
 
 # Switch languages with ibus
 bind = $mainMod SHIFT, E, exec, ibus engine xkb:us::eng
