update scripts & config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -149,6 +149,7 @@ windowrulev2 = float, class:^(org.gnome.Calculator|pavucontrol)$
 windowrulev2 = workspace 10 silent, class:^Spotify$
 windowrulev2 = monitor 0, class:^Rofi$
 windowrulev2 = stayfocused, class:^Rofi$
+windowrulev2 = fullscreen, class:^Microsoft-edge$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -158,7 +159,8 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive, 
 bind = CONTROL ALT, DELETE, exit, 
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, T, togglefloating, 
+bind = $mainMod, T, togglefloating,
+bind = $mainMod, F, fullscreen,
 bind = $mainMod SHIFT, T, workspaceopt, allfloat
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
