--- a/starship.toml
+++ b/starship.toml
@@ -4,7 +4,7 @@
 add_newline = false
 
 format = '''
- $directory$git_branch
+ $directory$git_branch$git_status
  $character
 '''
 right_format = '''
