--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,6 +22,7 @@ monitor=HDMI-A-1,1920x1080,-1920x0,1
 # Execute your favorite apps at launch
 exec-once = waybar # Waybar
 exec-once = hyprpaper # Wallpaper
+exec-once = hyprshade on vibrance
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # Gnome GUI Authenticate
 exec-once = wl-paste --type text --watch cliphist store # cliphist with text
 exec-once = ibus-daemon -d & # start ibus
@@ -148,7 +149,6 @@ windowrulev2 = opacity 0.8, class:^Spotify$
 windowrulev2 = float, class:^(org.gnome.Calculator|pavucontrol)$
 windowrulev2 = workspace 10 silent, class:^Spotify$
 windowrulev2 = stayfocused, class:^Rofi$
-windowrulev2 = fullscreen, class:^Microsoft-edge$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
