--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -81,12 +81,11 @@ decoration {
     rounding = 10
     blur {
         enabled = true
-        noise = 0.02
-        size = 10
+        size = 2
         passes = 3
-        brightness = 1
-        contrast = 1
-        popups = true
+        noise = 0
+        ignore_opacity = false
+        new_optimizations = true
     }
 
     drop_shadow = yes
@@ -144,7 +143,6 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
-windowrulev2 = opacity 0.9, class:^kitty$
 windowrulev2 = opacity 0.8, class:^Spotify$
 windowrulev2 = float, class:^(org.gnome.Calculator|pavucontrol)$
 windowrulev2 = workspace 10 silent, class:^Spotify$
