--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,6 +7,8 @@ font_family   JetbrainsMono Nerd Font
 
 window_padding_width 5
 
+background_opacity 0.7
+
 map ctrl+k scroll_line_up
 map ctrl+j scroll_line_down
 map ctrl+shift+k scroll_home
