Add fzf, update config

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = ~/.config/media/desktop.jpg
+preload = ~/.config/media/desktop.png
 
-wallpaper = ,~/.config/media/desktop.jpg
+wallpaper = ,~/.config/media/desktop.png
 
 splash = false
