--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ lazy-lock.json
 !fonts/
 !media/
 
+# Except personal background
+media/desktop.png
+
 # Auto install files
 !scripts/
 !install.sh
