--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,15 +1,13 @@
 # BEGIN_KITTY_THEME
 # Catppuccin Kitty Macchiato
-include current-theme.conf
+include Catppuccin-Mocha.conf
 # END_KITTY_THEME
 
-font_family   JetbrainsMono Nerd Font
+font_family   Fira Code
 
 window_padding_width 5
 
 background_opacity 0.7
 
-map ctrl+k scroll_line_up
-map ctrl+j scroll_line_down
-map ctrl+shift+k scroll_home
-map ctrl+shift+j scroll_end
+map ctrl+shift+k scroll_line_up
+map ctrl+shift+j scroll_line_down
