--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,5 +9,7 @@ window_padding_width 5
 
 background_opacity 0.7
 
+cursor_shape beam
+
 map ctrl+shift+k scroll_line_up
 map ctrl+shift+j scroll_line_down
