--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,9 +7,10 @@ font_family   Fira Code
 
 window_padding_width 5
 
-background_opacity 0.7
+background_opacity 0.8
 
 cursor_shape beam
 
+map ctrl+shift+t new_tab_with_cwd
 map ctrl+shift+k scroll_line_up
 map ctrl+shift+j scroll_line_down
