--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,7 +3,7 @@
 include Catppuccin-Mocha.conf
 # END_KITTY_THEME
 
-font_family   Fira Code
+font_family   JetBrainsMono Nerd Font
 
 window_padding_width 5
 
